--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -24,10 +24,7 @@
                   href="{% url 'blog:create_post' %}">Написать пост</a></button>
               <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
                   href="{% url 'blog:profile' user.username %}">{{ user.username }}</a></button>
-              <form method="post" action="{% url 'logout' %}" class="d-inline">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-outline-primary">Выйти</button>
-              </form>
+              <a href="{% url 'logout' %}" class="btn btn-outline-primary">Выйти</a>
             </div>
           {% else %}
             <div class="btn-group" role="group" aria-label="Basic outlined example">
